<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.kebabwarriors</groupId>
  <artifactId>file-indexer</artifactId>
  <version>1.0.0</version>
  <name>FileIndexer</name>
  <properties>
    <java.version>14</java.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-shade-plugin</artifactId>
      	<version>3.2.3</version>
      </plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-compiler-plugin</artifactId>
      	<version>3.8.1</version>
      	<configuration>
          <release>14</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
          <parameters>true</parameters>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	<dependency>
      <groupId>net.sf.py4j</groupId>
      <artifactId>py4j</artifactId>
      <version>0.8.1</version>
	</dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
	  <version>4.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-scratchpad</artifactId>
      <version>4.1.2</version>
    </dependency>
    <dependency>
  	  <groupId>org.apache.logging.log4j</groupId>
  	  <artifactId>log4j-api</artifactId>
  	  <version>2.11.0</version>
  	</dependency>
  	<dependency>
  	  <groupId>org.apache.logging.log4j</groupId>
  	  <artifactId>log4j-core</artifactId>
  	  <version>2.17.1</version>
  	</dependency>
  	<dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>2.0.19</version>
	</dependency>
  	 <dependency>
	   <groupId>org.apache.logging.log4j</groupId>
	   <artifactId>log4j-api</artifactId>
	   <version>2.13.2</version>
	 </dependency>
	 <dependency>
	   <groupId>org.apache.logging.log4j</groupId>
	   <artifactId>log4j-core</artifactId>
	   <version>2.17.1</version>
	 </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>5.7.0-M1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>5.7.0-M1</version>
       <scope>test</scope>
     </dependency>
  </dependencies>
</project>